@@ -1,7 +1,7 @@
 ## Interface: 80100
 ## Author: Merathilis
 ## X-Credits: Benik, Blazeflack, Azilroka, Simpy, Whiro, Darth Predator, fgprodigal, siweia, Solor, Elv & all AddOn Authors who inspired me.
-## Version: 4.20
+## Version: 4.21
 ## Title: |cFF00c0faElvUI|r |cffff7d0aMerathilisUI|r
 ## Notes: A decorative edit for ElvUI + additional features.
 ## Notes-deDE: Eine dekorative Erweiterung für ElvUI + einige zusätzliche Funktionen.
@@ -10,8 +10,8 @@
 ## SavedVariables: MERData
 ## SavedVariablesPerCharacter: MERDataPerChar
 ## OptionalDeps: SharedMedia, AddOnSkins, BigWigs, ls_Toasts, Masque
-## X-ElvVersion: 11.11
-## X-Curse-Packaged-Version: 4.20
+## X-ElvVersion: 11.12
+## X-Curse-Packaged-Version: 4.21
 ## X-Curse-Project-Name: MerathilisUI
 ## X-Curse-Project-ID: merathilis-ui
 ## X-Tukui-ProjectID: 1
